# ranger

./: Cargo.toml  README.md
ranger_ai/: Cargo.toml
ranger_ai/src/: lib.rs
ranger_physics/: Cargo.toml
ranger_physics/src/: lib.rs
src/: common.rs  interface.rs  lib.rs  main.rs  physics.rs
src/actor/: basic_enemy.rs  bullet.rs  mod.rs  player.rs
src/gameplay/: mod.rs  shooting.rs
src/physics/: aabb.rs  mod.rs  systems.rs
src/world/: map.rs  mod.rs  physics.rs
