workspace = { members = [ "ranger_ai","ranger_physics"] }
[package]
name = "ranger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["wayland"] }
ranger_physics = { path = "../ranger/ranger_physics" }
ranger_ai = { path = "../ranger/ranger_ai" }
